# vector-db-from-scratch

./: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
src/: main.py
src/api/: chunks.py  documents.py  libraries.py  library_service_provider.py  router.py  search.py
src/domain/: models.py
src/infrastructure/: brute_force_index.py  embedders.py  index.py  index_manager.py  lsh_index.py  repositories.py
src/services/: library_service.py
tests/: conftest.py  test_brute_force_index.py  test_documents_api.py  test_embeddings.py  test_libraries_api.py  test_library_service.py
tests/acceptance/: test_api_e2e.py
